--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=GestaoSla
+
+# Configuração do Banco de Dados
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=gestao_sla
+spring.datasource.username=sa
+spring.datasource.password=@ITB123456
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# JPA Configurações
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
